api/deployment/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: occ-api
  namespace: occ
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3333
  selector:
    name: occ-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: occ-api
  namespace: occ
spec:
  selector:
    matchLabels:
      name: occ-api
  strategy:
    type: RollingUpdate
  revisionHistoryLimit: 1
  replicas: 3
  template:
    metadata:
      labels:
        name: occ-api
    spec:
      imagePullSecrets:
        - name: secret
      containers:
        - name: occ-api
          image: api:IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1
              port: 3333
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/v1
              port: 3333
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
