api/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
  name: occ-ingress
  namespace: occ
spec:
  tls:
    - hosts:
        - occ.k8s.tinkeringaround.de
      secretName: occ-certificate
  rules:
    - host: occ.k8s.tinkeringaround.de
      http:
        paths:
          - path: /api/v1
            backend:
              serviceName: occ-api
              servicePort: 80
          - path: /
            backend:
              serviceName: occ-frontend
              servicePort: 80
